--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField "String","API_KEY","\"QE8alngX4n945AtYr65GRnfIi9JS8wU4v4bWpDj8s2BxcSzibZPPnTLVVf1QLsoS\""
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -24,6 +26,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -52,30 +56,18 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-//    // Retrofit
-//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-//    implementation "com.squareup.okhttp3:okhttp:4.9.0"
-//    implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
-//
-//    // Coroutines
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
-//    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
-//
-//    // Coroutine Lifecycle Scopes
-//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-//    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
-//    implementation "androidx.activity:activity-ktx:1.2.2"
+    
 
     def retrofit_version = "2.8.1"
     def coroutines_version = "1.3.5"
     def lifecycle_version = "2.2.0"
 
+    // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.okhttp3:logging-interceptor:4.5.0"
 
+    // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
