--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,8 @@ android {
         versionCode 1
         versionName "1.0"
 
-        buildConfigField "String","API_KEY","\"QE8alngX4n945AtYr65GRnfIi9JS8wU4v4bWpDj8s2BxcSzibZPPnTLVVf1QLsoS\""
+        buildConfigField "String","API_KEY",API_KEY
+
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
